--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link{
-    color: rgba(117,200,170,1.00)!important;
+    color: black!important;
 }
 
 @media (max-width:991px) {
@@ -28,7 +28,8 @@
     right: 0px;
     margin: 0 auto;
     text-align: center;
-    background: rgba(117,200,170,.80);
+    background: black;
+    opacity: .8;
     padding: 20px 20px;
     max-width: 675px;
     border-radius: 30px;
@@ -100,7 +101,7 @@
 color: rgba(112,112,112,1.00);
 background-color: white;
 border-radius: 2.4rem;
-border: 3px solid rgba(117,200,170,1.00);
+border: 3px solid black;
 
 }
 
@@ -128,7 +129,8 @@ border: 3px solid rgba(117,200,170,1.00);
     right: 0px;
     margin: 0 auto;
     text-align: center;
-    background: rgba(117,200,170,.80);
+    background: black;
+    opacity: .8;
     padding: 20px 20px;
     max-width: 675px;
     border-radius: 30px;
@@ -145,7 +147,7 @@ border: 3px solid rgba(117,200,170,1.00);
 }
 
 .border-bottom{
-    border-bottom: 6px solid rgba(117,200,170,1.00)!important;
+    border-bottom: 6px solid black!important;
 
 }
 
@@ -166,14 +168,14 @@ border: 3px solid rgba(117,200,170,1.00);
 }
 
 .btn-tab:hover{
-    color: #fff;
+    color: black;
     background-color: rgba(112,112,112,1.00);
     border-color: none;
     box-shadow: none!important;
 }
 .btn-tab-active{
-    color: #fff!important;
-    background-color: rgba(117,200,170,1.00);
+    color: black!important;
+    background-color: black;
 }
 
 .btn:focus{
@@ -186,8 +188,8 @@ border: 3px solid rgba(117,200,170,1.00);
 }
 
 .btn-gallery{
-    color: #fff!important;
-    background-color: rgba(117,200,170,1.00);
+    color: white!important;
+    background-color: black;
     border-color: none;
     box-shadow: none!important;
     margin: 8px 5px 8px 5px;
@@ -199,7 +201,7 @@ border: 3px solid rgba(117,200,170,1.00);
 .btn-gallery:hover, .btn-gallery:active, .btn-gallery:focus{
     border-bottom: 3px solid white;
     margin: 8px 5px 5px 5px;
-    color: black!important;
+    color: white!important;
 }
 
 @media (max-width:768px) {
